# udp-server-connections

./: .gitignore  README.md  deps.toml
.github/workflows/: build_linux.yml  build_macos.yml
src/: CMakeLists.txt
src/examples/: CMakeLists.txt  cmake_gen.toml  main.c
src/include/udp-server-connections/: connections.h  unique_id.h
src/lib/: CMakeLists.txt  udp_server_connections.c  unique_id.c
