cmake_minimum_required(VERSION 3.17)
project(udp-server-connections C)

add_subdirectory("deps/piot/flood-c/src/lib")
add_subdirectory("deps/piot/tiny-libc/src/lib")
add_subdirectory("deps/piot/clog/src/lib")
add_subdirectory("deps/piot/secure-random-c/src/lib")
add_subdirectory("deps/piot/udp-connections-serialize/src/lib")
add_subdirectory("deps/piot/datagram-transport-c/src/lib")
add_subdirectory("deps/piot/udp-server-c/src/lib")
add_subdirectory("lib")
#add_subdirectory("test")
add_subdirectory("examples")